# Project

./: .eslintrc.js  Dockerfile  README.md  package.json
app/: Cargo.toml  schema.graphql
app/src/: lib.rs  store.rs
app/src/state/: mod.rs  msg.rs
app/src/views/: contributors_view.rs  home_view.rs  icons.rs  index_view.rs  initial_view.rs  mod.rs  not_found_view.rs  settings_view.rs  sign_in_view.rs  sign_up_view.rs  tasks_view.rs  toolbar.rs
app/src/views/sidebar/: mod.rs  sidebar_item_view.rs
client/: Cargo.toml
client/src/: lib.rs
components/: Facebook.tsx  Icon.tsx  Item.tsx  README.md  Sidebar.tsx  Toolbar.tsx
pages/: _app.tsx  chat.tsx  dashboard.tsx  directory.tsx  feed.tsx  index.tsx  initial.tsx  pricing.tsx  projects.tsx  settings.tsx  sign_in.tsx  targets.tsx  tasks.tsx
pages/targets/: [target_id].tsx  index.tsx
pages/tasks/: [task_id].tsx  index.tsx
server/: Cargo.toml
server/src/: index.html  main.rs  routes.rs
