[package]
name = "isomorphic-app"
version = "0.1.0"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
edition = "2018"

[dependencies]
css-rs-macro = "0.1"
virtual-dom-rs = "0.6.14"
router-rs = "0.2.1"
log = "0.4.13"
serde = { version = "1.0.119", features = ["rc", "derive"] }
serde_json = "1.0.61"
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
web-sys = "0.3.46"
js-sys = "0.3.46"
cynic = { version = "0.11.0", default_features = false }
