[package]
name = "isomorphic-client"
version = "0.1.0"
authors = ["Chinedu Francis Nwafili <frankie.nwafili@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
isomorphic-app = { path = "../app" }
js-sys = "0.3.46"
log = "0.4.13"
virtual-dom-rs = "0.6.14"

[dependencies.wasm-bindgen]
version = "0.2.69"
features = ["default", "nightly"]

[dependencies.web-sys]
version = "0.3.46"
features = [
    "console",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "History",
    "Location",
    "Node",
    "NodeList",
    "Text",
    "Window",
    "HtmlCollection",
    "Url",
    "UrlSearchParams"
]
